<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:checked="true"/>
        <item
            android:id="@+id/item_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login"
             />
        <item
            android:id="@+id/item_signup"
            android:icon="@drawable/ic_attachment"
            android:title="@string/signup"/>

        <item android:id="@+id/item_myInquries"
            android:icon="@drawable/ic_message"
            android:title="@string/my_inquries"
            android:visible="false"/>

        <item android:id="@+id/item_myRequests"
            android:icon="@drawable/ic_pending"
            android:title="@string/my_requests"
            android:visible="false"/>

        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/ic_login"
            android:title="@string/logout"
            android:visible="false"/>
    </group>

<!--    <item android:title="Sub menu">-->

<!--        <menu>-->

<!--            <item android:title="Item 1"-->
<!--                android:icon="@drawable/ic_emoticon"/>-->

<!--            <item android:title="Item 2"-->
<!--                android:icon="@drawable/ic_emoticon"/>-->
<!--        </menu>-->

<!--    </item>-->
</menu>