<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ClientFinelForm"
    android:paddingTop="50dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/nearly_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/nearly_done"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nearly_TV"
        android:text="@string/add_description_and_photos_to_help_our_spetz"
        android:textAlignment="center"
        android:padding="15dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:id="@+id/expTV"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/linear"
        android:layout_below="@id/expTV"
        android:weightSum="2"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/cam_icon"
            android:id="@+id/camBtn"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/gallery_icon"
            android:id="@+id/galleryBtn"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/decriptionET"
        android:layout_below="@+id/linear"
        android:textAlignment="center"
        android:hint="@string/what_is_the_problem"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spetzlistBtn"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_to_spetz_list"/>

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_below="@+id/decriptionET"
        android:id="@+id/resultImage"/>

</RelativeLayout>