<?xml version="1.0" encoding="utf-8"?>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--             android:layout_width="match_parent"-->
<!--             android:layout_height="match_parent"-->

<!--    android:id="@+id/root_container">-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_container"
    android:layout_marginTop="60dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:hint="@string/hi_client"
        android:textSize="18dp"
        android:textColorHint="@color/black"
        android:id="@+id/hiClient"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/handyMAnTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hiClient"
        android:background="@android:drawable/editbox_background"
        android:drawableEnd="@drawable/handyman_icon"
        android:gravity="center_vertical"
        android:hint="Find a spetz"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:padding="12dp" />


    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/handyMAnTV"
        android:layout_centerHorizontal="true"
        android:text="@string/searchView" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:src="@drawable/handymanlogo01" />

    <TextView
        android:id="@+id/message_tv"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/search_button"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="Massege TV"
        android:textSize="30sp" />

    <Button
        android:id="@+id/spetsRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inquiries"
        android:layout_centerHorizontal="true"
        android:text="Spetz Requests"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/inquiries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/inquiriesButton" />

<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/navigation_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        app:headerLayout="@layout/header_layout"-->
<!--        app:menu="@menu/drawer_menu"-->
<!--        />-->

</RelativeLayout>
